[package]
name = "e8-omni-off"
version = "0.1.0"
edition = "2024"
default-run = "e8-omni-off"

[profile.profiling]
inherits = "release"
debug = true

[dependencies]
bitflags = "2.10.0"
clap = { version = "4.5.54", features = ["derive"] }
fxhash = "0.2.1"
nalgebra = "0.34.1"
rand = { version = "0.9.2", features = ["small_rng"] }
